# Overcooked

./: .gitignore  CMakeLists.txt  README.md  gcc-arm-none-eabi.cmake
HB_aux_BP/: .mxproject  CMakeLists.txt  HB_aux_BP.ioc
HB_aux_BP/Core/Inc/: stm32f1xx_it.h
HB_aux_BP/Core/Inc/Backup/: main.h.bak
HB_aux_BP/Core/Src/: freertos.c  gpio.c  main.c  stm32f1xx_it.c  usart.c
HB_aux_BP/Core/Src/Backup/: adc.c.bak  freertos.c.bak  main.c.bak  stm32f1xx_it.c.bak  usart.c.bak
HB_aux_BP/Source/app/: app_preServing.c  app_preServing.h  app_preStacking.c  app_preStacking.h  app_serving.c  app_serving.h  app_stacking.c  app_stacking.h
HB_aux_BP/cmake/stm32cubemx/: CMakeLists.txt
HB_aux_BP/cmake/stm32cubemx_aux/: CMakeLists.txt
HB_navi_BP/: .mxproject  CMakeLists.txt  HB_Navi.ioc  HB_navi_BP.ioc
HB_navi_BP/Core/Inc/: main.h  stm32f1xx_it.h
HB_navi_BP/Core/Inc/Backup/: main.h.bak  stm32f1xx_it.h.bak
HB_navi_BP/Core/Src/: adc.c  freertos.c  gpio.c  main.c  stm32f1xx_it.c  tim.c
HB_navi_BP/Core/Src/Backup/: adc.c.bak  freertos.c.bak  gpio.c.bak  main.c.bak  stm32f1xx_it.c.bak  tim.c.bak  usart.c.bak
HB_navi_BP/Source/: mean.c  mean.h
HB_navi_BP/Source/app/: app_init.c  app_init.h  app_preServing.c  app_preServing.h  app_preStacking.h  app_serving.c  app_serving.h
HB_navi_BP/cmake/stm32cubemx/: CMakeLists.txt
HB_navi_BP/cmake/stm32cubemx_navi/: CMakeLists.txt
JG_main/: .mxproject  CMakeLists.txt  JG_main.ioc
JG_main/Core/Inc/: stm32f1xx_it.h
JG_main/Core/Src/: gpio.c  tim.c  usart.c
JG_main/cmake/stm32cubemx_main/: CMakeLists.txt
shared/app/: app_analog.c  app_analog.h  app_claw.c  app_claw.h  app_dcMotor.c  app_dcMotor.h  app_drivetrain.c  app_drivetrain.h  app_lift.c  app_lift.h  app_lineFollowing.c  app_lineFollowing.h  app_navi.c  app_navi.h  app_naviStateMachine.c  app_naviStateMachine.h  app_pwm.c  app_pwm.h  app_stacker.c  app_stacker.h  app_stateMachine.c  app_stateMachine.h  app_sweeper.c  app_sweeper.h  app_wheel.c  app_wheel.h
shared/hw/: hw_dcMotor.c  hw_dcMotor.h  hw_reflectance.c  hw_reflectance.h  hw_rotaryEncoder.c  hw_rotaryEncoder.h  hw_servo.c  hw_servo.h
shared/io/: io_adc.c  io_adc.h  io_pwm.c  io_pwm.h
